--- a/R_templates/testreport.Rmd
+++ b/R_templates/testreport.Rmd
@@ -24,6 +24,8 @@ AnnotationTable<-read.table("AnnotationTable_DATETIME.tsv",header = T,sep = "\t"
 AnnotationTable$Isolate<-substr(AnnotationTable$Isolate,14,18)
 SubtypingTable<-read.table("SubtypeTable_DATETIME.tsv",header=T, sep="\t",check.names=T)
 SubtypingTable$Isolate<-substr(SubtypingTable$Isolate,14,18)
+SoftwareTable<-read.table("Software_table_DATETIME.tsv", header=F, sep="\t")
+
 ```
 ## Introduction
 The Veterinary Laboratory Investigation and Response Network (Vet-LIRN) provided samples to thirteen pilot laboratories for assessment of the utility of the Illumina iSeq platform for bacterial surveillance. The results from the sequencing of these samples will allow Vet-LIRN and the iSeq laboratories the opportunity to assess their capability to test previously characterized isolates and confirm that harmonized methods are working properly within the laboratories. Throughout this report, values that are either unexpected or outside of current GenomeTrakr benchmarks are colored in yellow or red.
@@ -33,6 +35,8 @@ Samples consisted of four *Escherichia coli* and two *Listeria monocytogenes* is
 
 ## Conclusion
 TODO
+
+##### 
 
 ## Read Metrics
 The table below gives quality metrics for the reads produced by this run. Targets are average forward and reverse quality scores >=30 for both the forward and reverse reads and coverage depth >=40X  for *E. coli* and >=20X for *L. monocytogenes*. Coverage depth is estimated by multiplying the number of reads by the average read length and dividing by the expected genome length (5 Mbp for *E. coli* and 3 Mbp for *L. monocytogenes*). 
@@ -47,7 +51,9 @@ flextable(ReadMetrics) %>%
   bold(part="header") %>%
   autofit() %>% align(align="center", part="all")
 ```
-
+  
+\   \   
+  
 
 ## Assembly Metrics
 The table below describes the *de novo* assemblies generated for each isolate by SKESA. Target values for the number of contigs and total assembly length are are <=600 and 4.2--5.9 Mbp for *E. coli* and <=200 and 2.8--3.1 Mbp for *L. monocytogenes*. Values outside of these ranges are colored in red. N50/NG50 values below 10,000 indicate a highly fragmented assembly and are colored in yellow. Unaligned bases, also in yellow, are suggestive of a sample swap or contamination. The aligned percentage shows the proportion of the reference genome covered by the *de novo* assembly. 
@@ -67,7 +73,7 @@ flextable(AssemblyMetrics) %>%
   autofit() %>% align(align="center", part="all")
 ```
 
-
+##### 
 ## Alignment Metrics
 The table below shows result from mapping reads from each isolate against the corresponding closed reference genome using the CFSAN SNP Pipeline. Values outside of the expected ranges are colored in yellow. Low mapping percentages and high SNP counts suggest a sample swap or contamination. 
 ```{r aligment table, echo=FALSE}
@@ -75,14 +81,16 @@ The table below shows result from mapping reads from each isolate against the co
 flextable(AlignmentMetrics) %>%
   color( ~ SNPs >10, color = "goldenrod", ~ SNPs) %>%
   color( ~ Reads.Mapped.... < 97.5, color = "goldenrod", ~ Reads.Mapped....) %>%
-  color( ~ Insert.Size > 350| Insert.Size < 300, color = "goldenrod, ~ Insert.Size") %>%
+  color( ~ Insert.Size > 350| Insert.Size < 300, color = "goldenrod", ~ Insert.Size) %>%
   set_header_labels(Reads.Mapped.... = "Reads Mapped (%)", Insert.Size="Insert Size", Read.Depth="Read Depth") %>%
   bold(part="header") %>%
   autofit() %>% align(align="center", part="all")
 ```
+  
+\  \   
+  
 
-
-## Subtpying
+## Subtyping
 This table shows the serotype of *E. coli* isolates and the 7-gene multilocus sequence type (ST) of *E. coli* and *L. monocytogenes* isolates. Serotypes and STs that differ from the correspdoning reference genome are colored in red.
 ```{r subtyping table, echo=FALSE}
 
@@ -95,7 +103,7 @@ flextable(SubtypingTable) %>%
   autofit() %>% align(align="center", part="all")
 ```
 
-
+##### 
 ## Gene Annotations
 This table compares the AMR genes (ARGs) and virulence factors (VFs) detected in each isolate compared to those detected in the corresponding reference genome. Virulence factor screening was not conducted for *L. monocytogenes*.
 ```{r annotation table, echo=FALSE}
@@ -108,26 +116,26 @@ flextable(AnnotationTable) %>%
   color(~ !Unexpected.VFs %in% c("None","NA"), color = "darkred", ~ Unexpected.VFs) %>%
   autofit() %>% align(align="center", part="all")
 ```
+  
+ \  \  
+  
 
 ## Software Versions
-FastQC v0.11.8
+   
+   
+```{r software table, echo=FALSE}
 
-SKESA v.2.3.0
+flextable(SoftwareTable) %>%
+ delete_part(part="header") %>% 
+ bg(bg = "grey85", j=1) %>%
+ border_outer(part="body", border=fp_border(width=1)) %>%
+ border_inner_h(part="body", border=fp_border(width=1)) %>%
+ border_inner_v(part="body", border=fp_border(width=1)) %>%
+ autofit() %>% align(align="left", part="all")
+```
+  
+\  \   
+  
 
-QUAST v5.0.2
-
-ncbi-amrfinderplus 3.0.12
-
-AMRFinder database 2019-09-06.1
-
-abricate 0.9.8
-
-mlst 2.18.0
-
-ectyper 0.8.1
-
-
-
-**Report prepared by:**
-
-**Report approved by:**
+**Report prepared by:**  
+**Report approved by:**  
