--- a/R_templates/testreport.Rmd
+++ b/R_templates/testreport.Rmd
@@ -31,7 +31,7 @@ SoftwareTable<-read.table("Software_table_DATETIME.tsv", header=F, sep="\t")
 The Veterinary Laboratory Investigation and Response Network (Vet-LIRN) provided samples to thirteen pilot laboratories for assessment of the utility of the Illumina iSeq platform for bacterial surveillance. The results from the sequencing of these samples will allow Vet-LIRN and the iSeq laboratories the opportunity to assess their capability to test previously characterized isolates and confirm that harmonized methods are working properly within the laboratories. Throughout this report, values that are either unexpected or outside of current GenomeTrakr benchmarks are colored in yellow or red.
 
 ## Background
-Samples consisted of four *Escherichia coli* and two *Listeria monocytogenes* isolates collected and previously distributed by Genome Trackr for MiSeq proficiency testing. Laboratories extracted DNA from these isolates and prepared sequencing libraries using Nextera DNA Flex, which were then run on the iSeq platform. Read quality, *de novo* assembly metrics, reference mapping, subtyping, and gene annotation were assessed for each sample.
+Samples consisted of four *Escherichia coli* and two *Listeria monocytogenes* isolates collected and previously distributed by GenomeTrakr for MiSeq proficiency testing. Laboratories extracted DNA from these isolates and prepared sequencing libraries using Nextera DNA Flex, which were then run on the iSeq platform. Read quality, *de novo* assembly metrics, reference mapping, subtyping, and gene annotation were assessed for each sample.
 
 ## Conclusion
 TODO
@@ -56,7 +56,7 @@ flextable(ReadMetrics) %>%
   
 
 ## Assembly Metrics
-The table below describes the *de novo* assemblies generated for each isolate by SKESA. Target values for the number of contigs and total assembly length are are <=600 and 4.2--5.9 Mbp for *E. coli* and <=200 and 2.8--3.1 Mbp for *L. monocytogenes*. Values outside of these ranges are colored in red. N50/NG50 values below 10,000 indicate a highly fragmented assembly and are colored in yellow. Unaligned bases, also in yellow, are suggestive of a sample swap or contamination. The aligned percentage shows the proportion of the reference genome covered by the *de novo* assembly. 
+The table below describes the *de novo* assemblies generated for each isolate by SKESA. Target values for the number of contigs and total assembly length are <=600 and 4.2--5.9 Mbp for *E. coli* and <=200 and 2.8--3.1 Mbp for *L. monocytogenes*. Values outside of these ranges are colored in red. N50/NG50 values below 10,000 indicate a highly fragmented assembly and are colored in yellow. Unaligned bases, also in yellow, are suggestive of a sample swap or contamination. The aligned percentage shows the proportion of the reference genome covered by the *de novo* assembly. 
 ```{r assembly table, echo=FALSE}
 
 flextable(AssemblyMetrics) %>%
@@ -91,7 +91,7 @@ flextable(AlignmentMetrics) %>%
   
 
 ## Subtyping
-This table shows the serotype of *E. coli* isolates and the 7-gene multilocus sequence type (ST) of *E. coli* and *L. monocytogenes* isolates. Serotypes and STs that differ from the correspdoning reference genome are colored in red.
+This table shows the serotype of *E. coli* isolates and the 7-gene multilocus sequence type (ST) of *E. coli* and *L. monocytogenes* isolates. Serotypes and STs that differ from the corresponding reference genome are colored in red.
 ```{r subtyping table, echo=FALSE}
 
 flextable(SubtypingTable) %>%
